readme update and semaphor

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
             <aside class="dashboard glass">
                 <button id="sidebarClose" class="close-sidebar-btn">&times;</button>
+                <div id="worldStatus" class="world-status status-genesis">PHASE: GENESIS</div>
                 <section class="controls-section">
                     <h3>Simulation Controls</h3>
                     <div class="main-controls">
