--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 </section>
                 <section class="faction-stats">
                     <h3>Faction Distribution</h3>
-                    <div class="stat-row" data-faction="Entropics">
-                        <div class="label">Entropics</div>
+                    <div class="stat-row" data-faction="Shadows">
+                        <div class="label">Shadows</div>
                         <div class="bar-container">
-                            <div class="bar" style="width: 25%; background: var(--entropic-color);"></div>
+                            <div class="bar" style="width: 25%; background: var(--shadow-color);"></div>
                         </div>
                         <div class="value">25%</div>
                     </div>
@@ -146,14 +146,14 @@
                 </p>
                 <p style="font-size: 0.85rem; color: #888; margin-top: 1rem; font-style: italic;">
                     The 40 personalities are divided into 10 specialized variations for each of the 4 factions. For
-                    example, within the <strong>Entropics</strong>, you'll find everything from silent
+                    example, within the <strong>Shadows</strong>, you'll find everything from silent
                     <strong>Leeches</strong> to high-speed <strong>Reapers</strong>, each with different rates of
                     aggression and energy consumption.
                 </p>
             </div>
             <div class="faction-grid">
-                <div class="faction-card" style="border-top: 4px solid var(--entropic-color);">
-                    <h3>🌑 Entropics</h3>
+                <div class="faction-card" style="border-top: 4px solid var(--shadow-color);">
+                    <h3>🌑 Shadows</h3>
                     <p><strong>Logic:</strong> Zero-Sum Gain / Drain</p>
                     <p>Predators that seek high-value targets to consume or convert. They represent decay and entropy.
                     </p>
